language/grammar/volt-v0.ebnf
Program        = ModuleDecl ImportDecl* Decl* EOF
ModuleDecl     = "module" ModulePath
ModulePath     = lowerCamelName ("." lowerCamelName)*
ImportDecl     = "import" ModulePath ".{" ImportName ("," ImportName)* "}"
ImportName     = lowerCamelName | UpperName

Decl           = Pub? (RecordDecl | TypeDecl | EffectDecl | FunctionDecl)
Pub            = "pub"
RecordDecl     = "record" UpperName "{" FieldDecl ("," FieldDecl)* "}"
FieldDecl      = lowerCamelName ":" Type
TypeDecl       = "type" UpperName "{" VariantDecl+ "}"
VariantDecl    = UpperName | UpperName "(" Type ")"
EffectDecl     = "effect" UpperName "{" EffectFnDecl+ "}"
EffectFnDecl   = "fn" lowerCamelName "(" Params? ")" "->" Type
FunctionDecl   = "fn" lowerCamelName "(" Params? ")" Uses? "->" Type Block
Params         = Param ("," Param)*
Param          = lowerCamelName ":" Type
Uses           = "uses" "{" UpperName ("," UpperName)* "}"

Type           = "Int" | "Bool" | "String" | "Unit" | UpperName
               | "List" "<" Type ">"
               | "Option" "<" Type ">"
               | "Result" "<" Type "," Type ">"

Block          = "{" Expr "}"
Expr           = LetExpr | IfExpr | MatchExpr | OrExpr
LetExpr        = "let" lowerCamelName TypeAnnotation? "=" Expr "in" Expr
TypeAnnotation = ":" Type
IfExpr         = "if" Expr Block "else" Block
MatchExpr      = "match" Expr "{" MatchArm+ "}"
MatchArm       = Pattern "->" Expr

OrExpr         = AndExpr ("||" AndExpr)*
AndExpr        = EqualityExpr ("&&" EqualityExpr)*
EqualityExpr   = OrderExpr (("==" | "!=") OrderExpr)?
OrderExpr      = AddExpr (("<" | "<=" | ">" | ">=") AddExpr)?
AddExpr        = MultiplyExpr (("+" | "-") MultiplyExpr)*
MultiplyExpr   = UnaryExpr (("*" | "/" | "%") UnaryExpr)*
UnaryExpr      = ("!" | "-") UnaryExpr | PostfixExpr
PostfixExpr    = AtomExpr (("(" Arguments? ")") | ("." lowerCamelName))*
Arguments      = Expr ("," Expr)*

AtomExpr       = Integer | StringLiteral | "true" | "false" | "()"
               | lowerCamelName | UpperName | ListLiteral | RecordLiteral | "(" Expr ")"
ListLiteral    = "[" (Expr ("," Expr)*)? "]"
RecordLiteral  = UpperName "{" FieldValue ("," FieldValue)* "}"
FieldValue     = lowerCamelName ":" Expr

Pattern        = "_" | lowerCamelName | LiteralPattern | ConstructorPattern
               | RecordPattern | ListPattern
LiteralPattern = Integer | StringLiteral | "true" | "false" | "()"
ConstructorPattern = UpperName | UpperName "(" Pattern ")"
RecordPattern  = UpperName "{" FieldPattern ("," FieldPattern)* "}"
FieldPattern   = lowerCamelName ":" Pattern
ListPattern    = "[]" | "[" Pattern "," "..." lowerCamelName "]"
